...
  },
  "result": {
    "reviewCount_one": "({{count}} değerlendirme)",
    "reviewCount_other": "({{count}} değerlendirme)"
  },
  "breadcrumb": {
    "home": "Ana Sayfa"
  }
}

